MD Settings People: Display "On - custom settings" for custom data types

When the user has a custom data types synced, display
"On - custom settings" instead of "On - sync everything".

BUG=662025

Review-Url: https://codereview.chromium.org/2631803002
Cr-Commit-Position: refs/heads/master@{#444409}

Former-commit-id: 634697b5871cac5bee8850a965b97e23961fd8c8